--- a/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
+++ b/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
@@ -15,7 +15,8 @@
                   <tr style="height: 10px;">
                     <td style="width: 270px;" class="font-weight-normal">Tanggal Valuta</td>
                     <td style="width: 5px;">:</td>
-                    <td style="width: 500px;"><input type="text" name="tglvaluta" id="tglvaluta" style="width: 250px;" class="form-control form-control-sm"></td>
+                    <td style="width: 500px;"><input type="text" name="tglvaluta" id="tglvaluta" style="width: 250px;"
+                        class="form-control form-control-sm"></td>
                     <td style="width: 350px;"></td>
                     <td style="width: 5px;"></td>
                     <td style="width: 5px;"></td>
@@ -24,7 +25,7 @@
                   <tr>
                     <td class="font-weight-normal">No Referensi</td>
                     <td>:</td>
-                    <td><input type="text" name="noreferensi" id ="noreferensi" style="width: 150px;" class="form-control form-control-sm"></td>
+                    <td><input type="text" name="noreferensi" id="noreferensi" style="width: 150px;" class="form-control form-control-sm"></td>
                     <!-- <td></td>
                     <td></td> -->
                     <!-- <td></td>
