--- a/src/app/page-not-found/page-not-found.component.css
+++ b/src/app/page-not-found/page-not-found.component.css
@@ -146,11 +146,11 @@ li a:hover {
     margin: 15px auto;
     width: 100px;
     padding: 10px 15px;
-    border: 1px solid black;
+    border: 1px solid #006ab3;
     border-radius: 100px;
     font-weight: 400;
     display: block;
-    color:black;
+    color:006ab3;
     text-align: center;
     text-decoration: none;
     letter-spacing : 2px;
@@ -236,42 +236,6 @@ li a:hover {
     background-repeat: repeat;
     background-size: contain;
     background-position: left top;
-}
-
-.glowing_stars .star{
-    position: absolute;
-    border-radius: 100%;
-    background-color: #fff;
-    width: 3px;
-    height: 3px;
-    opacity: 0.3;
-    will-change: opacity;
-}
-
-.glowing_stars .star:nth-child(1){
-    top: 80%;
-    left: 25%;
-    animation: glow-star 2s infinite ease-in-out alternate 1s;
-}
-.glowing_stars .star:nth-child(2){
-    top: 20%;
-    left: 40%;
-    animation: glow-star 2s infinite ease-in-out alternate 3s;
-}
-.glowing_stars .star:nth-child(3){
-    top: 25%;
-    left: 25%;
-    animation: glow-star 2s infinite ease-in-out alternate 5s;
-}
-.glowing_stars .star:nth-child(4){
-    top: 75%;
-    left: 80%;
-    animation: glow-star 2s infinite ease-in-out alternate 7s;
-}
-.glowing_stars .star:nth-child(5){
-    top: 90%;
-    left: 50%;
-    animation: glow-star 2s infinite ease-in-out alternate 9s;
 }
 
 @media only screen and (max-width: 600px){
