--- a/src/app/cashdrawer/denominasi/denominasi.component.html
+++ b/src/app/cashdrawer/denominasi/denominasi.component.html
@@ -99,7 +99,7 @@
                   <span class="col-2"></span>
                   <label class="col-1 col-form-label">10 X</label>
                   <input type="text" class="form-control col-3" id="input1" placeholder="0">
-                  <label for="input1" class="col-1 col-form-label pl-0">Koin =</label>
+                  <label for="input1" class="col-1 col-form-label pl-0">&nbsp;&nbsp;Koin =</label>
                   <div class="col-3">
                     <input type="text" class="form-control" id="input2" placeholder="0" style="text-align:right;">
                   </div>
@@ -110,7 +110,7 @@
                   <span class="col-2"></span>
                   <label class="col-1 col-form-label">25 X</label>
                   <input type="text" class="form-control col-3" id="input1" placeholder="0">
-                  <label for="input1" class="col-1 col-form-label pl-0">Koin =</label>
+                  <label for="input1" class="col-1 col-form-label pl-0">&nbsp;&nbsp;Koin =</label>
                   <div class="col-3">
                     <input type="text" class="form-control" id="input2" placeholder="0" style="text-align:right;">
                   </div>
@@ -121,7 +121,7 @@
                   <span class="col-2"></span>
                   <label class="col-1 col-form-label">50 X</label>
                   <input type="text" class="form-control col-3" id="input1" placeholder="0">
-                  <label for="input1" class="col-1 col-form-label pl-0">Koin =</label>
+                  <label for="input1" class="col-1 col-form-label pl-0">&nbsp;&nbsp;Koin =</label>
                   <div class="col-3">
                     <input type="text" class="form-control" id="input2" placeholder="0" style="text-align:right;">
                   </div>
@@ -132,7 +132,7 @@
                   <span class="col-2"></span>
                   <label class="col-1 col-form-label">100 X</label>
                   <input type="text" class="form-control col-3" id="input1" placeholder="0">
-                  <label for="input1" class="col-1 col-form-label pl-0">Koin =</label>
+                  <label for="input1" class="col-1 col-form-label pl-0">&nbsp;&nbsp;Koin =</label>
                   <div class="col-3">
                     <input type="text" class="form-control" id="input2" placeholder="0" style="text-align:right;">
                   </div>
@@ -143,7 +143,7 @@
                   <span class="col-2"></span>
                   <label class="col-1 col-form-label">200 X</label>
                   <input type="text" class="form-control col-3" id="input1" placeholder="0">
-                  <label for="input1" class="col-1 col-form-label pl-0">Koin =</label>
+                  <label for="input1" class="col-1 col-form-label pl-0">&nbsp;&nbsp;Koin =</label>
                   <div class="col-3">
                     <input type="text" class="form-control" id="input2" placeholder="0" style="text-align:right;">
                   </div>
@@ -154,7 +154,7 @@
                   <span class="col-2"></span>
                   <label class="col-1 col-form-label">500 X</label>
                   <input type="text" class="form-control col-3" id="input1" placeholder="0">
-                  <label for="input1" class="col-1 col-form-label pl-0">Koin =</label>
+                  <label for="input1" class="col-1 col-form-label pl-0">&nbsp;&nbsp;Koin =</label>
                   <div class="col-3">
                     <input type="text" class="form-control" id="input2" placeholder="0" style="text-align:right;">
                   </div>
@@ -165,7 +165,7 @@
                   <span class="col-2"></span>
                   <label class="col-1 col-form-label">1000 X</label>
                   <input type="text" class="form-control col-3" id="input1" placeholder="0">
-                  <label for="input1" class="col-1 col-form-label pl-0">Koin =</label>
+                  <label for="input1" class="col-1 col-form-label pl-0">&nbsp;&nbsp;Koin =</label>
                   <div class="col-3">
                     <input type="text" class="form-control" id="input2" placeholder="0" style="text-align:right;">
                   </div>
