--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -78,9 +78,9 @@
               </button>
               <div class="dropdown-menu dropdown-primary">
                 <a class="dropdown-item" [routerLink]="['/cashdrawer/denominasi']">Denominasi</a>
+                <a class="dropdown-item" [routerLink]="['/cashdrawer/balancing']">Balancing</a>
               </div>
             </div>
-
           <!-- Default form contact -->
           <br><br><br><br><br><br><br>
         </div>
@@ -90,5 +90,4 @@
   <!-- /Start your project here-->
 </div>
 <!--Main layout-->
-
 <app-footer-home></app-footer-home>
