update footer and form sinkronisasi

--- a/src/app/cashdrawer/balancing/balancing.component.html
+++ b/src/app/cashdrawer/balancing/balancing.component.html
@@ -27,18 +27,23 @@
           </mdb-card>
           <!--Panel Atas 1-->
 
+          <!--Panel Tabs-->
           <div class="btn-group" role="group" aria-label="Basic example mb-0">
-            <button (click)="fungsi0()" mdbBtn type="button"  [ngClass]="{'btn-default' : konten0, 'btn-light': !konten0}" mdbWavesEffect>Teller
+            <button (click)="fungsi0()" mdbBtn type="button" [ngClass]="{'btn-default' : konten0, 'btn-light': !konten0}"
+              mdbWavesEffect>Teller
               Cash Balancing</button>
-            <button (click)="fungsi1()" mdbBtn type="button"  [ngClass]="{'btn-default' : konten1, 'btn-light': !konten1}" mdbWavesEffect>Ringkasan
+            <button (click)="fungsi1()" mdbBtn type="button" [ngClass]="{'btn-default' : konten1, 'btn-light': !konten1}"
+              mdbWavesEffect>Ringkasan
               Transaksi</button>
-            <button (click)="fungsi2()" mdbBtn type="button"  [ngClass]="{'btn-default' : konten2, 'btn-light': !konten2}" mdbWavesEffect>Daftar
+            <button (click)="fungsi2()" mdbBtn type="button" [ngClass]="{'btn-default' : konten2, 'btn-light': !konten2}"
+              mdbWavesEffect>Daftar
               Transaksi</button>
           </div>
+          <!--Panel Tabs-->
 
+          <!--Panel isi konten dari menu tabs-->
           <mdb-card>
             <mdb-card-body>
-
               <div class="tab-content">
                 <div *ngIf="konten0" role="tabpanel" class="tab-pane active" id="one">Konten Cash Balancing</div>
                 <div *ngIf="konten1" role="tabpanel" class="tab-pane active" id="one">Konten Ringkasan Transaksi</div>
@@ -46,14 +51,11 @@
               </div>
             </mdb-card-body>
           </mdb-card>
-
-
-
+          <!--Panel isi konten dari menu tabs-->
           <span style="height: 10vh;"></span>
         </div>
       </div>
     </div>
-
   </div>
 </div>
 <style>
