--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -78,6 +78,7 @@
               <div class="dropdown-menu dropdown-primary">
                 <a class="dropdown-item" [routerLink]="['/cashdrawer/denominasi']">Denominasi</a>
                 <a class="dropdown-item" [routerLink]="['/cashdrawer/balancing']">Balancing</a>
+                <a class="dropdown-item" [routerLink]="['/cashdrawer/sinkronisasi']">Sinkronisasi</a>
               </div>
             </div>
           <!-- Default form contact -->
