--- a/src/app/footer/footer-home/footer-home.component.html
+++ b/src/app/footer/footer-home/footer-home.component.html
@@ -1,5 +1,5 @@
 <!--Footer-->
-<footer class="navbar justify-content-center">
+<footer class="navbar justify-content-center footer">
     <div class="text-body">
       Copyright &copy; 2018: <a href="https://bank-jateng.com" class="text-muted"> &ensp;&ensp; Bank Pembangunan Daerah
         Jawa Tengah (Bank Jateng)</a>All Right Reserved.
