--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,6 @@ background-color:rgba(255, 255, 255, 10%);
     padding: 6px 6px;
     margin: 1px 0px 1px 1px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
