--- a/src/app/rekening-koran/cetakrekening/cetakrekening.component.html
+++ b/src/app/rekening-koran/cetakrekening/cetakrekening.component.html
@@ -1,3 +1,56 @@
-<p>
-  cetakrekening works!
-</p>
+<!--Main layout-->
+<div class="m-3 h-100">
+  <!-- Start your project here-->
+  <div id="outer" class="d-flex flex-column">
+    <div class="card">
+      <div class="card-body">
+        <h5>Cetak Rekening Koran</h5>
+
+        <mdb-card>
+          <mdb-card-body>
+
+            <!--input 1-->
+            <div class="form-group row border">
+              <label class="col-2 col-form-label border font-weight-bold">No Rekening Pertama</label>
+              <label class="col-form-label pr-0 border font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input1-->
+
+            <!--input 1-->
+            <div class="form-group row border">
+              <label class="col-2 col-form-label border font-weight-bold">No Rekening Terakhir</label>
+              <label class="col-form-label pr-0 border font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input1-->
+
+            <!--input 1-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label border font-weight-bold">Tanggal Mulai</label>
+              <label class="col-form-label pr-0 border font-weight-bold">:</label>
+
+              <div class="col-3">
+          
+
+
+              </div>
+
+
+
+              <span class="col-6 col-form-label pl-0"></span>
+            </div>
+            <!--input1-->
+
+
+          </mdb-card-body>
+        </mdb-card>
+
+        <span style="height: 10vh;"></span>
+      </div>
+    </div>
+  </div>
+
+</div>
