--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,6 @@ background-color:rgba(255, 255, 255, 10%);
     padding: 6px 6px;
     margin: 1px 0px 1px 1px;
 }
+#outer{
+    min-height: 500px;
+}
