--- a/src/app/footer/footer-home/footer-home.component.html
+++ b/src/app/footer/footer-home/footer-home.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container text-center">
+  <div class="container text-center font-weight-bold">
     Copyright &copy; 2018: <a href="/" class="text-muted"> &ensp;&ensp; Bank Pembangunan Daerah
       Jawa Tengah (Bank Jateng)</a>All Right Reserved.
   </div>
