--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <!--Footer-->
 <footer class="navbar fixed-bottom justify-content-center" *ngIf="!isDashboard" >
   <div class="text-body">
-    Copyright &copy; 2018: <a href="https://bank-jateng.com" class="text-muted"> &ensp;&ensp; Bank Pembangunan Daerah
+    Copyright &copy; 2018: <a href="/login" class="text-muted"> &ensp;&ensp; Bank Pembangunan Daerah
       Jawa Tengah (Bank Jateng)</a>All Right Reserved.
   </div>
 </footer>
