--- a/src/app/pembayaran/bayar-pkb/bayar-pkb.component.html
+++ b/src/app/pembayaran/bayar-pkb/bayar-pkb.component.html
@@ -1,47 +1,48 @@
 <!--Main layout-->
-<div style="margin: 20px;">
-    <!-- Start your project here-->
-    <div class="d-flex flex-column h-100">
-      <div id="outer" class="d-flex flex-column flex-grow">
-        <div class="card">
-          <div class="card-body">
-            <h5>TRANSAKSI PEMBAYARAN PKB</h5>
-            <!-- Default form contact -->
-            <div class="card">
-              <div class="card-body">
-                <form>
-                  <table class="table table-borderless table-sm">
-                    <tr style="height: 10px;">
-                      <td style="width: 190px;" class="font-weight-normal">Nomor Kendaraan</td>
-                      <td style="width: 5px;">:</td>
-                      <td style="width: 500px;"><input type="text" name="norekening" id="norekening" style="width: 250px;" class="form-control form-control-sm"></td>
-                      <td style="width: 350px;"></td>
-                      <td style="width: 5px;"></td>
-                      <td style="width: 5px;"></td>
-                      <td colspan="2"></td>
-                    </tr>
-                    <tr>
-                      <td class="font-weight-normal">Tanggal Valuta</td>
-                      <td style="width: 10px;">:</td>
-                      <div class="input-group-addon">
-                          <input class="form-control form-control-s" type="date"  style="width: 250px;">
-                          <!-- <div class="input-group-addon">
-                              <span class="glyphicon glyphicon-th"></span>
-                          </div> -->
-                      </div>
-                    </tr>
-                  </table>
-                  <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-primary btn-rounded">Proses</button>
-                    <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
-                  </div>
-                </form>
+<div class="m-3 h-100">
+  <!-- Start your project here-->
+  <div id="outer" class="d-flex flex-column">
+    <div class="card">
+      <div class="card-body">
+        <h5>Transaksi Pembayaran PKB</h5>
+
+        <mdb-card>
+          <mdb-card-body>
+
+            <!--input 1-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Nomor Kendaraan</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" name="nokendaraan" id="nokendaraan" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input1-->
+
+            <!--input 2-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Tanggal Valuta</label>
+              <label class="col-form-label pr-0 font-weight-bold">:</label>
+              <div class="col-3">
+                <input class="form-control" [matDatepicker]="picker" placeholder="Tanggal Mulai">
+                <mat-datepicker #picker></mat-datepicker>
+                <div class="input-group-append">
+                  <button mat-raised-button (click)="picker.open()" class="form-control"><i class="fa fa-calendar"></i></button>
+                </div>
               </div>
             </div>
-            <br><br><br>
-          </div>
-        </div>
+            <!--input 2-->
+
+            <div class="d-flex justify-content-center">
+                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+            </div>
+          </mdb-card-body>
+        </mdb-card>
+
+        <span style="height: 10vh;"></span>
       </div>
     </div>
   </div>
+
+</div>
   
