add daftar rekening koran

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -88,6 +88,7 @@
             </button>
             <div class="dropdown-menu dropdown-primary">
               <a class="dropdown-item" [routerLink]="['/rekening/cetak']">Cetak Rekening Koran</a>
+              <a class="dropdown-item" [routerLink]="['/rekening/daftar']">Daftar Rekening Koran</a>
             </div>
           </div>
           <!-- Default form contact -->
