--- a/src/app/pembayaran/bayar-pkb/bayar-pkb.component.html
+++ b/src/app/pembayaran/bayar-pkb/bayar-pkb.component.html
@@ -22,7 +22,7 @@
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">Tanggal Valuta</label>
               <label class="col-form-label pr-0 font-weight-bold">:</label>
-              <div class="col-3">
+              <div class="col-3 form-inline">
                 <input class="form-control" [matDatepicker]="picker" placeholder="Tanggal Mulai">
                 <mat-datepicker #picker></mat-datepicker>
                 <div class="input-group-append">
