--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,6 +18,7 @@
               <a class="dropdown-item" [routerLink]="['/administrator/webbranchstatus']">WebBranch</a>
               <a class="dropdown-item" [routerLink]="['/administrator/tglbisnis']">Pengaturan Tanggal Bisnis</a>
               <a class="dropdown-item" [routerLink]="['/administrator/aktifitasuser']">Daftar Aktifitas User</a>
+              <a class="dropdown-item" [routerLink]="['/administrator/upload']">Upload Transaksi</a>
             </div>
           </div>
 
@@ -44,10 +45,6 @@
               <a class="dropdown-item" [routerLink]="['/maintencance/gantisandi']">Ganti Sandi</a>
               <a class="dropdown-item" [routerLink]="['/maintencance/kontroluser']">Kontrol User</a>
               <a class="dropdown-item" [routerLink]="['/maintencance/tutupuser']">Tutup User</a>
-              <a class="dropdown-item" [routerLink]="['/maintencance/ctkpassbook']">Cetak PassBook</a>
-              <a class="dropdown-item" [routerLink]="['/maintencance/hdrpassbook']">Cetak Header PassBook</a>
-              <a class="dropdown-item" [routerLink]="['/maintencance/ulangpassbook']">Cetak Ulang Header PassBook</a>
-              <a class="dropdown-item" [routerLink]="['/maintencance/checktaspen']">Check Taspen</a>
             </div>
           </div>
 
@@ -69,6 +66,17 @@
               <a class="dropdown-item" [routerLink]="['/pembayaran/bayarmpn']">Pembayaran MPN</a>
               <a class="dropdown-item" [routerLink]="['/pembayaran/billpayment']">Pembayaran Bill Payment</a>
             </div>
+          </div>
+
+          <div class="btn-group" mdbDropdown>
+            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
+              PassBook
+            </button>
+            <div class="dropdown-menu dropdown-primary">
+              <a class="dropdown-item" [routerLink]="['/passbook/ctkpassbook']">Cetak PassBook</a>
+              <a class="dropdown-item" [routerLink]="['/passbook/hdrpassbook']">Cetak Header PassBook</a>
+              <a class="dropdown-item" [routerLink]="['/passbook/ulangpassbook']">Cetak Ulang Header PassBook</a>
+              <a class="dropdown-item" [routerLink]="['/passbook/checktaspen']">Check Taspen</a></div>
           </div>
 
           <div class="btn-group" mdbDropdown>
