--- a/src/app/navigation/home-nav/home-nav.component.html
+++ b/src/app/navigation/home-nav/home-nav.component.html
@@ -1,5 +1,5 @@
 <!--Main Navigation-->
-<div style="width: 170vw;">
+<div>
     <nav style="margin-top: 20vh;margin-left: 20px;">
       <button class="btn btn-default btn-press" type="submit">Financial Retail</button>
       <button class="btn btn-default btn-press" type="submit">Administrative</button>
@@ -8,14 +8,13 @@
       <button class="btn btn-default btn-press" type="submit">Pembayaran</button>
       <button class="btn btn-default btn-press" type="submit">Rekening</button>
       <button class="btn btn-default btn-press" type="submit">Kartu</button>
-      <div style="margin-top: 5px;">
         <button class="btn btn-default btn-press" type="submit">Rekening Koran</button>
         <button class="btn btn-default btn-press" type="submit">Cash Drawer Teller</button>
         <button class="btn btn-default btn-press" type="submit">PassBook</button>
         <button class="btn btn-default btn-press" type="submit">Otorisasi Head CS</button>
         <button class="btn btn-default btn-press" type="submit">Cash Drawer</button>
         <button class="btn btn-default btn-press" type="submit">Nasabah</button>
-      </div>
+      
     </nav>
   </div>
 
