--- a/src/app/rekening-koran/cetakrekening/cetakrekening.component.html
+++ b/src/app/rekening-koran/cetakrekening/cetakrekening.component.html
@@ -2,7 +2,7 @@
 <div class="m-3 h-100">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
-    <div class="card">
+    <div class="card konten">
       <div class="card-body">
         <h5>Cetak Rekening Koran</h5>
 
