--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,6 +19,7 @@
               <a class="dropdown-item" [routerLink]="['/administrator/tglbisnis']">Pengaturan Tanggal Bisnis</a>
               <a class="dropdown-item" [routerLink]="['/administrator/aktifitasuser']">Daftar Aktifitas User</a>
               <a class="dropdown-item" [routerLink]="['/administrator/upload']">Upload Transaksi</a>
+              <a class="dropdown-item" [routerLink]="['/administrator/offlinelimit']">Change Offline Limit</a>
             </div>
           </div>
 
