--- a/src/app/report/cetak-rekening/cetak-rekening.component.html
+++ b/src/app/report/cetak-rekening/cetak-rekening.component.html
@@ -4,7 +4,7 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5>Daftar Saldo Kas Cabang</h5>
+        <h5>Cetak Rekening</h5>
 
         <mdb-card>
           <mdb-card-body>
@@ -18,7 +18,8 @@
           </mdb-card-body>
         </mdb-card>
         <div class="d-flex justify-content-center mt-2">
-          <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>ATM</button>
+          <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Cetak Rekening</button>
+          <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Download Report</button>
       </div>
         <span style="height: 20vh;"></span>
       </div>
