--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -46,6 +46,7 @@
               <a class="dropdown-item" [routerLink]="['/maintencance/gantisandi']">Ganti Sandi</a>
               <a class="dropdown-item" [routerLink]="['/maintencance/kontroluser']">Kontrol User</a>
               <a class="dropdown-item" [routerLink]="['/maintencance/tutupuser']">Tutup User</a>
+              <a class="dropdown-item" [routerLink]="['/maintencance/gantisandioveride']">Ganti Sandi Over Ride</a>
             </div>
           </div>
 
