--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -42,11 +42,12 @@
               Maintenance
             </button>
             <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/maintencance/caribaruuser']">Pencarian user</a>
-              <a class="dropdown-item" [routerLink]="['/maintencance/gantisandi']">Ganti Sandi</a>
-              <a class="dropdown-item" [routerLink]="['/maintencance/kontroluser']">Kontrol User</a>
-              <a class="dropdown-item" [routerLink]="['/maintencance/tutupuser']">Tutup User</a>
-              <a class="dropdown-item" [routerLink]="['/maintencance/gantisandioveride']">Ganti Sandi Over Ride</a>
+              <a class="dropdown-item" [routerLink]="['/maintenance/caribaruuser']">Pencarian user</a>
+              <a class="dropdown-item" [routerLink]="['/maintenance/gantisandi']">Ganti Sandi</a>
+              <a class="dropdown-item" [routerLink]="['/maintenance/kontroluser']">Kontrol User</a>
+              <a class="dropdown-item" [routerLink]="['/maintenance/tutupuser']">Tutup User</a>
+              <a class="dropdown-item" [routerLink]="['/maintenance/gantisandioveride']">Ganti Sandi Over Ride</a>
+              <a class="dropdown-item" [routerLink]="['/maintenance/role']">Pencarian Role</a>
             </div>
           </div>
 
