--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,6 +28,7 @@
               Teller In
             </button>
             <div class="dropdown-menu dropdown-primary">
+              <a class="dropdown-item" [routerLink]="['/tellerin/tellerin']">Teller In</a>
               <a class="dropdown-item" [routerLink]="['/tellerin/setorantunai']">Setoran Tunai</a>
               <a class="dropdown-item" [routerLink]="['/tellerin/penarikantunai']">Penarikan Tunai</a>
               <a class="dropdown-item" [routerLink]="['/tellerin/selisihkas']">Selisih Kas</a>
